--- a/static/css/main.css
+++ b/static/css/main.css
@@ -127,3 +127,12 @@ button:hover {
     cursor: pointer;
 }
 
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+li {
+    float: left;
+}
